# pocky

./: .dockerignore  Cargo.toml  fly.toml  rustfmt.toml
.github/workflows/: fly.yml
adapters/: Cargo.toml
adapters/src/: in_memory.rs  lib.rs  tokio_scheduler.rs  tokio_timer.rs  websocket.rs
adapters/src/web/: http.rs  mod.rs  state.rs
adapters/src/web/websocket/: handler.rs  mod.rs  notifier.rs
application/: Cargo.toml
application/src/ports/: mod.rs
application/src/ports/in_/: game_service.rs  matchmaking_service.rs  mod.rs  queue_service.rs
application/src/ports/out_/: common.rs  game.rs  mod.rs  queue.rs
core/src/: game.rs  game_core.rs  game_instance.rs  lib.rs  matchmaking.rs  traits.rs  types.rs
domain/: Cargo.toml
domain/src/: game.rs  lib.rs  queue.rs  types.rs
domain/src/game/: action.rs  config.rs  effect.rs  error.rs  event.rs  mod.rs  player.rs  state.rs  tests.rs  ticker.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
src/adapter/: in_memory.rs  tokio_scheduler.rs  tokio_timer.rs  websocket.rs
src/adapters/: in_memory.rs  mod.rs  tokio_scheduler.rs  tokio_timer.rs  websocket.rs
src/application/domain/: game.rs  lobby.rs  mod.rs  queue.rs
src/application/ports/in_/: game_service.rs  lobby_service.rs  matchmaking_service.rs  mod.rs  queue_service.rs
src/application/ports/out_/: game.rs  lobby.rs  matchmaking.rs  mod.rs  queue.rs
src/domain/: game.rs  lobby.rs  mod.rs  ports.rs  services.rs  types.rs
tui/: Cargo.toml
tui/src/: app.rs  events.rs  main.rs  theme.rs  ui.rs  ws.rs
web/: index.html  package-lock.json  package.json
web/src/: App.svelte
web/src/lib/api/: queue.js
web/src/lib/components/: InfoBox.svelte  PlayerCard.svelte  PriceChart.svelte
web/src/lib/stores/: connection.js  game.js  matchmaking.js
web/src/lib/websocket/: client.js  handlers.js  messages.js
web/src/pages/: Game.svelte  Matchmaking.svelte
