[workspace]
members = ["domain", "application", "adapters", "server", "tui"]
resolver = "2"

[workspace.dependencies]
domain = { path = "domain" }
application = { path = "application" }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
