[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
domain.workspace = true
application.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
