[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
domain = { workspace = true }
clap = { version = "4", features = ["derive"] }
